--- a/MyFirstAppAndroid/app/src/main/AndroidManifest.xml
+++ b/MyFirstAppAndroid/app/src/main/AndroidManifest.xml
@@ -12,6 +12,19 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyFirstAppAndroid"
         tools:targetApi="31">
+
+        <service
+            android:name=".service.SyncDataService"
+            android:foregroundServiceType="dataSync" />
+
+        <receiver
+            android:name=".broadcastreceiver.LowBatteryBroadcastReceiver"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BATTERY_LOW" />
+            </intent-filter>
+        </receiver>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
